[EPMDEDP-6042]: Add an opportunity to run autotests in Moon
- run autotests by gradle command;
- unhardcode qa env in tests;

Change-Id: I16105f2ade87bbf3034ffeb8022baf42951dda4c